# Cafe_bot_automation

./: README.md
install/cafe_bot/lib/cafe_bot/: task
install/cafe_bot/share/cafe_bot/launch/: sim_launch.py
log/: latest_build
src/cafe_bot/: CMakeLists.txt
src/cafe_bot/src/: task.cpp
